# eirepeat

./: .bumpversion.cfg  README.md  pyproject.toml  requirements.txt  setup.py
eirepeat/: __init__.py  __main__.py
eirepeat/etc/: eirepeat_config.yaml  hpc_config.json  queryRepeatDatabase.tree.txt  run_config.yaml
eirepeat/scripts/: add_directives_GFF3.py  clean_GFF3_source.py  compute_coverage.py  create_run_config.py  eirepeat_configure.py  jiracomms.py  merge_repeats.py  ncbi_download.py  red_rpt_to_GFF3.py  repeatmasker_out_to_gff.py  repeatmasker_to_GFF3.py
eirepeat/workflow/: Snakefile
